maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (isDirectionFree(Direction.NORD))
                     ^PledgeMaze:10: error: value unary_! is not a member of Unit
    while (!isDirectionFree(Direction.NORD)&&sommeAngle!=0)
           ^PledgeMaze:22: error: type mismatch;
 found   : Unit
 required: Boolean
def allerAuNord(){while (isDirectionFree(Direction.NORD))
                                        ^PledgeMaze:37: error: not found: value dir
; setDirection(dir);
               ^PledgeMaze:40: error: return outside method definition
 return(!e)}
 ^PledgeMaze:45: error: not found: value sommeAngle
                          {avance();sommeAngle+=1;return()}
                                    ^PledgeMaze:49: error: not found: value sommeAngle
                          droite();sommeAngle-=1;}
                                   ^